[ position ] - fix up spacing - remove superfluous comments - fix negative positions not working

--- a/src/components/position/__.scss
+++ b/src/components/position/__.scss
@@ -5,10 +5,10 @@ $position-neg-dist:     $distances-neg !default;
 
 $position-coords: (
 
-    t:      "top",
-    b:      "bottom",
-    r:      "right",
-    l:      "left",
+    t:      top,
+    b:      bottom,
+    r:      right,
+    l:      left,
 
 ) !default;
 
